# libopusencoder-android

./: README.md  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
opusencoder/: build.gradle
opusencoder/src/main/: AndroidManifest.xml
opusencoder/src/main/cpp/: CMakeLists.txt  opuscodec.cpp
opusencoder/src/main/cpp/opus/libopus/: Android.mk  config.status  libtool  opus-uninstalled.pc  opus.pc  opus_buildtype.cmake
opusencoder/src/main/cpp/opus/libopusenc/: Android.mk  CMakeLists.txt  config.status  libopusenc-uninstalled.pc  libopusenc.pc  libtool
opusencoder/src/main/cpp/opus/libopusenc/doc/: Doxyfile
opusencoder/src/main/cpp/opus/libopusenc/examples/.deps/: opusenc_example.Po
opusencoder/src/main/cpp/opus/libopusenc/src/.deps/: ogg_packer.Plo  opus_header.Plo  opusenc.Plo  picture.Plo  resample.Plo  unicode_support.Plo
opusencoder/src/main/java/im/vector/opusencoder/: OggOpusEncoder.kt
opusencoder/src/main/java/io/element/android/opusencoder/: OggOpusEncoder.kt  OggOpusEncoderImpl.kt
opusencoder/src/main/java/io/element/android/opusencoder/configuration/: SampleRate.kt
